==> SiliconLabsSoftware/third_party_hw_drivers_extension/driver/public/silabs/ir_array_amg88xx/src/ir_array_amg88xx.c <==
#include <stddef.h>
#include <stdlib.h>
#include <stdint.h>
#include <math.h>
#include "sl_status.h"
#include "ir_array_amg88xx.h"
#include "sparkfun_amg88xx_config.h"

static sl_status_t amg88xx_i2c_read(uint8_t register_address,
                                    uint8_t *rx_buffer,
                                    uint8_t number_of_bytes)
{
  // Must write target address before reading.
  if (I2C_MASTER_SUCCESS != i2c_master_write_then_read(&ir_array.i2c,
                                                       &register_address,
                                                       1,
                                                       (uint8_t *)rx_buffer,
                                                       number_of_bytes)) {
    return SL_STATUS_TRANSMIT;
  }
  return SL_STATUS_OK;
}

static sl_status_t amg88xx_i2c_write(uint8_t register_address,
                                     const uint8_t *tx_buffer,
                                     uint8_t number_of_bytes)
{
  uint8_t tx_buffer_with_address[I2C_BUFFER_SIZE + 1];

  // Register address to write to.
  tx_buffer_with_address[0] = register_address;
  for (uint8_t i = 0; i < number_of_bytes; i++) {
    tx_buffer_with_address[i + 1] = tx_buffer[i];
  }

  if (I2C_MASTER_SUCCESS != i2c_master_write(&ir_array.i2c,
                                             tx_buffer_with_address,
                                             number_of_bytes + 1)) {
    return SL_STATUS_TRANSMIT;
  }
  return SL_STATUS_OK;
}

sl_status_t amg88xx_init(mikroe_i2c_handle_t amg88xx_i2c_instance_init,
                         uint8_t I2C_address,
                         enum temperature_scale_t temp_scale)
{
  i2c_master_config_t ir_array_config;

  ir_array.i2c.handle = amg88xx_i2c_instance_init;

  i2c_master_configure_default(&ir_array_config);

  ir_array_config.addr = I2C_address;
  ir_array.slave_address = ir_array_config.addr;

#if (SPARKFUN_AMG88XX_I2C_UC == 1)
  ir_array_config.speed = SPARKFUN_AMG88XX_I2C_SPEED_MODE;
#endif

  if (i2c_master_open(&ir_array.i2c, &ir_array_config) == I2C_MASTER_ERROR) {
    return SL_STATUS_INITIALIZATION;
  }

  i2c_master_set_slave_address(&ir_array.i2c, ir_array.slave_address);
  i2c_master_set_speed(&ir_array.i2c, ir_array_config.speed);
  i2c_master_set_timeout(&ir_array.i2c, 0);

  ir_array.temperature_scale = temp_scale;
  set_temperature_scale(ir_array.temperature_scale);

  return SL_STATUS_OK;
}
