==> SiliconLabs/third_party_hw_drivers_extension/driver/public/silabs/ir_array_amg88xx/src/ir_array_amg88xx.c <==
#include <stddef.h>
#include <stdlib.h>
#include <stdint.h>
#include <math.h>
#include "em_gpio.h"
#include "em_cmu.h"
#include "sl_status.h"
#include "ir_array_amg88xx.h"

static sl_status_t amg88xx_i2c_read(uint8_t register_address,
                                    uint8_t *rx_buffer,
                                    uint8_t number_of_bytes)
{
  // Transfer structure.
  I2C_TransferSeq_TypeDef i2c_transfer;
  I2C_TransferReturn_TypeDef result;

  // Initializing I2C transfer.
  i2c_transfer.addr = (uint16_t) (amg88xx_I2C_address << 1);
  // Must write target address before reading.
  i2c_transfer.flags = I2C_FLAG_WRITE_READ;
  i2c_transfer.buf[0].data = &register_address;
  i2c_transfer.buf[0].len = 1;
  i2c_transfer.buf[1].data = rx_buffer;
  i2c_transfer.buf[1].len = number_of_bytes;

  result = I2CSPM_Transfer(amg88xx_I2C_instance, &i2c_transfer);

  if (result == i2cTransferDone) {
    return SL_STATUS_OK;
  } else {
    return SL_STATUS_FAIL;
  }
}

static sl_status_t amg88xx_i2c_write(uint8_t register_address,
                                     const uint8_t *tx_buffer,
                                     uint8_t number_of_bytes)
{
  // Transfer structure.
  I2C_TransferSeq_TypeDef i2c_transfer;
  I2C_TransferReturn_TypeDef result;
  uint8_t tx_buffer_with_address[I2C_BUFFER_SIZE + 1];

  // Register address to write to.
  tx_buffer_with_address[0] = register_address;
  for (uint8_t i = 0; i < number_of_bytes; i++) {
    tx_buffer_with_address[i + 1] = tx_buffer[i];
  }

  // Initializing I2C transfer.
  i2c_transfer.addr = (uint16_t) (amg88xx_I2C_address << 1);
  i2c_transfer.flags = I2C_FLAG_WRITE;
  i2c_transfer.buf[0].data = tx_buffer_with_address;
  i2c_transfer.buf[0].len = number_of_bytes + 1;
  i2c_transfer.buf[1].data = NULL;
  i2c_transfer.buf[1].len = 0;

  result = I2CSPM_Transfer(amg88xx_I2C_instance, &i2c_transfer);

  if (result == i2cTransferDone) {
    return SL_STATUS_OK;
  } else {
    return SL_STATUS_FAIL;
  }
}

void amg88xx_init(sl_i2cspm_t *amg88xx_i2c_instance_init,
                  int16_t I2C_address,
                  enum temperature_scale_t temp_scale)
{
  amg88xx_I2C_instance = amg88xx_i2c_instance_init;
  amg88xx_I2C_address = I2C_address;
  set_temperature_scale(temp_scale);
}
